--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,4 @@
-# Compiled class file
-*.class
-
-# Package Files
-*.jar
-
 # Intellij idea catalogs
-out/**
-target/**
-.idea/**
+**/out/**
+**/target/**
+**/.idea/**
